# relay

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  SPEC.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
admin/: __init__.py  api.py  status_page.py
alembic/: env.py
alembic/versions/: 0001_baseline.py
config/: routing.yaml  teams.seed.yaml
datasets/: TIERING_RUBRIC.md  cache_traps.jsonl  complexity_labels.jsonl
docs/adr/: 0001-local-embeddings.md  0002-cache-namespacing.md  0003-exact-hash-fast-path.md  0004-singleflight.md  0005-tpm-precharge.md  0006-cache-write-policy.md  0007-fallback-never-downgrades.md  0008-honest-savings.md  0009-dev-test-discipline.md  0010-answer-determining-guards.md
docs/img/: README.md
gateway/: __init__.py  bootstrap.py  config.py  datasets.py  db.py  main.py  models.py  pipeline.py  pricing.py  registry.py  spend.py
gateway/adapters/: __init__.py  anthropic.py  base.py  mock.py  ollama.py  openai.py
gateway/cache/: __init__.py  (+8 more)
infra/: prometheus.yml
loadtest/: budget.py  common.py  outage.py  repeats.py  steady.py  storm.py
mockprovider/: __init__.py  app.py
models/: trap_dev_curve.json
results/: cache_trap_eval.json
scripts/: build_loadtest_corpus.py  demo.py  eval_cache_traps.py  gen_dashboards.py  harvest_metrics.py  length_baseline.py  reconcile_spend.py  retrain_from_failures.py  run_loadtest.py  seed_teams.py  split_complexity_dataset.py  train_classifier.py  validate_datasets.py
tests/: conftest.py  test_adapters.py  test_admin.py  test_cache_integration.py  test_cache_unit.py  test_dataset_contract.py  test_metrics.py  test_mock_provider.py  test_proxy.py  test_ratelimit_integration.py  test_resilience.py  test_router.py  test_verifier.py
verifier/: __init__.py  judge.py  queue.py  repo.py  worker.py
(+20 files in other folders)
