[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "relay-gateway"
version = "0.1.0"
description = "Cost-optimizing LLM gateway: semantic caching, complexity routing, budgets, resilience"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "redis>=5.0",
    "fastembed>=0.3",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "prometheus-client>=0.20",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-api>=1.24",
    "watchfiles>=0.21",
    "pyyaml>=6.0",
    "orjson>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "testcontainers>=4.0",
    "locust>=2.24",
    "ruff>=0.4",
    "mypy>=1.9",
    "joblib>=1.3",
    "asgi-lifespan>=2.1",
    "openai>=1.30",
    "streamlit>=1.35",
]

[tool.setuptools.packages.find]
include = ["gateway*", "verifier*", "mockprovider*", "admin*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "datasets"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# B008: Depends(...) in argument defaults is the FastAPI idiom
"gateway/main.py" = ["B008"]
"admin/api.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires Docker (testcontainers Redis/Postgres) or live services",
    "slow: long-running (model downloads, load tests)",
]
